[tool.poetry]
name = "problematic-internet-use-api"
version = "0.1.0"
description = ""
authors = ["elamribadrayour <badrayour.elamri@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.2.3"
orjson = "^3.10.7"
xgboost = "^2.1.1"
pydantic = "^2.9.2"
scikit-learn = "^1.5.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240909"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
